Souce working w/ handler module. Stopped using index.js

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,4 +1,6 @@
 {
   "showInlineTitle": false,
-  "showUnsupportedFiles": true
+  "showUnsupportedFiles": true,
+  "alwaysUpdateLinks": true,
+  "useMarkdownLinks": false
 }
