values implemented via MATH!

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,4 +1,7 @@
 {
   "cssTheme": "ITS Theme",
-  "showRibbon": true
+  "showRibbon": true,
+  "enabledCssSnippets": [
+    "table-middle-align"
+  ]
 }
