item-card-size css style added

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -2,6 +2,7 @@
   "cssTheme": "ITS Theme",
   "showRibbon": true,
   "enabledCssSnippets": [
-    "table-middle-align"
+    "table-middle-align",
+    "cardsize"
   ]
 }
