--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -3,5 +3,6 @@
   "showUnsupportedFiles": true,
   "alwaysUpdateLinks": true,
   "useMarkdownLinks": false,
-  "readableLineLength": false
+  "readableLineLength": false,
+  "promptDelete": false
 }
