scratch that. I'm a monster. Separated item "abilities" into their own section". Can't wait for this to bite me

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -4,5 +4,5 @@
   "alwaysUpdateLinks": true,
   "useMarkdownLinks": false,
   "readableLineLength": false,
-  "promptDelete": false
+  "propertiesInDocument": "hidden"
 }
