Preparing for adding xPHB items

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -4,5 +4,6 @@
   "alwaysUpdateLinks": true,
   "useMarkdownLinks": false,
   "readableLineLength": false,
-  "propertiesInDocument": "hidden"
+  "propertiesInDocument": "hidden",
+  "promptDelete": false
 }
