--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -5,5 +5,6 @@
   "useMarkdownLinks": false,
   "readableLineLength": false,
   "propertiesInDocument": "hidden",
-  "promptDelete": false
+  "promptDelete": false,
+  "attachmentFolderPath": "Assets"
 }
